--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="left">
                 <div class="profile-text">
                     <div class="imgbox">
-                        <img src="img/main%20pic.jpg">
+                        <img src="Img/main%20pic.jpg">
                     </div>
                     <h2>Amaefule Excel <br> <span> Front End Developer </span></h2>
                 </div>
