--- a/index.html
+++ b/index.html
@@ -55,28 +55,28 @@
                     <h3 class="title"><strong>Education</strong></h3>
                     <ul>
                         <li>
-                            <i class="icon"><img src="img/zuri%20intern.png"></i>
+                            <i class="icon"><img src="Img/zuri%20intern.png"></i>
                             <h4>2021-present</h4>
                             <h5>Zuri Training</h5>
                             <h4> certified front end developement</h4>
                         </li>
 
                         <li>         
-                            <i class="icon"><img src="img/gng.png"></i>
+                            <i class="icon"><img src="Img/gng.png"></i>
                             <h4>2021-present</h4>
                             <h5>HNGi8 x I4G Training</h5>
                             <h4> certified front end developement</h4>
                         </li>
 
                         <li>
-                            <i class="icon"><img src="img/1629264274117.jpeg"></i>
+                            <i class="icon"><img src="Img/1629264274117.jpeg"></i>
                             <h4>2014 - 2019</h4>
                             <h5>Bachelor of engineering</h5>
                             <h4> Civil Structural Engineering</h4>
                         </li>
 
                         <li>
-                            <i class="icon"><img src="img/1629264274106.jpeg"></i>
+                            <i class="icon"><img src="Img/1629264274106.jpeg"></i>
                             <h4>2007- 2013</h4>
                             <h5>Arch. Deacon Dennis boys secondary school</h5>
                             <h4> SSCE </h4>
